[gd_scene load_steps=7 format=3 uid="uid://gnrfrvcmqj0r"]

[ext_resource type="Script" uid="uid://6kufsop5afjp" path="res://UI/research_menu_components/research_menu.gd" id="1_6a0ui"]
[ext_resource type="Texture2D" uid="uid://bcih7dqgynq6g" path="res://UI/research_menu_components/placeholderart.jpg" id="1_448q0"]
[ext_resource type="Texture2D" uid="uid://ckmns84yska28" path="res://img/portraits/server_room.jpg" id="2_8rl70"]
[ext_resource type="StyleBox" uid="uid://dbiynfhcrgonq" path="res://UI/research_menu_components/research_menu.tres" id="3_sj57j"]
[ext_resource type="Texture2D" uid="uid://cpkrafp0qk8lx" path="res://img/Cell/Instict_PH.jpg" id="4_6a0ui"]
[ext_resource type="Texture2D" uid="uid://6coqu8cidxy0" path="res://img/gibs/icebox/NOTHING.png" id="5_rufiq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7g6qr"]
bg_color = Color(0.337255, 0.423529, 1, 0.294118)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.294118, 0.407843, 0.764706, 0.67451)

[node name="ResearchMenu" type="TabContainer"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
script = ExtResource("1_6a0ui")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.1
texture = ExtResource("2_8rl70")
expand_mode = 4

[node name="Name" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Just Nothing"
autowrap_mode = 3
clip_text = true

[node name="Unique_PE" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/normal = ExtResource("3_sj57j")
text = "PE: 0
"
autowrap_mode = 3
clip_text = true

[node name="Description" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Wirebirds are common anomalies that usually spawn in unkept server rooms. They are growing by consuming nearby electronic devices and can grow up to 3 meters in height.
At the first sight it may look that they are some kind of robot or artificial intelligence but they actually made out of flesh. Thats evident because they can bleed and lay flesh eggs, hence the name Wirebird.
They are passive but can become dangerous during mating season if they grow too big.
Due to their ability to convert matter via Radiance and their behaivior they are perfect for collecting samples."

[node name="Resources" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 1.6

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_7g6qr")
text = "Exit
"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2"]
z_index = 1
clip_contents = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="work1" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/GridContainer/work1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/GridContainer/work1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_6a0ui")
expand_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer/work1/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "zdgnfgnfngxfnfgn"
autowrap_mode = 3
clip_text = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer/work1"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = ExtResource("3_sj57j")
text = "zdgnfgnfngxfnfgn"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="OpenWork1" type="Button" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Purchase: "

[node name="work2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/GridContainer/work2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/GridContainer/work2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer/work2/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "zdgnfgnfngxfnfgn"
autowrap_mode = 3
clip_text = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer/work2"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = ExtResource("3_sj57j")
text = "zdgnfgnfngxfnfgn"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="OpenWork2" type="Button" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Purchase: "

[node name="work3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/GridContainer/work3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/GridContainer/work3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer/work3/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "zdgnfgnfngxfnfgn"
autowrap_mode = 3
clip_text = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer/work3"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = ExtResource("3_sj57j")
text = "zdgnfgnfngxfnfgn"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="OpenWork3" type="Button" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Purchase: "

[node name="work4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/GridContainer/work4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2/GridContainer/work4/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer/work4/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "zdgnfgnfngxfnfgn"
autowrap_mode = 3
clip_text = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer/work4"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = ExtResource("3_sj57j")
text = "zdgnfgnfngxfnfgn"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="OpenWork4" type="Button" parent="HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Purchase: "

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyEscapeStats" type="Button" parent="HBoxContainer/VBoxContainer3"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.64
theme_override_styles/normal = SubResource("StyleBoxFlat_7g6qr")
text = "Purchase: "

[node name="EscapeStats" type="Label" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.36
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Does not escape"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Shop" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="OpenWeapon" type="Button" parent="HBoxContainer/VBoxContainer3/Shop"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_7g6qr")
text = "Purchase: "

[node name="Weapon" type="VBoxContainer" parent="HBoxContainer/VBoxContainer3/Shop"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer3/Shop/Weapon"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45
columns = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer3/Shop/Weapon/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Texture" type="TextureRect" parent="HBoxContainer/VBoxContainer3/Shop/Weapon/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.31
texture = ExtResource("5_rufiq")
expand_mode = 4

[node name="Stats" type="Label" parent="HBoxContainer/VBoxContainer3/Shop/Weapon"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Does not possess a weapon"
autowrap_mode = 3
clip_text = true

[node name="SpecialEffects" type="Label" parent="HBoxContainer/VBoxContainer3/Shop/Weapon"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "No special effects"
autowrap_mode = 3
clip_text = true

[node name="OpenArmor" type="Button" parent="HBoxContainer/VBoxContainer3/Shop"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_7g6qr")
text = "Purchase: "

[node name="Armor" type="VBoxContainer" parent="HBoxContainer/VBoxContainer3/Shop"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer3/Shop/Armor"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45
columns = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer3/Shop/Armor/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Texture" type="TextureRect" parent="HBoxContainer/VBoxContainer3/Shop/Armor/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.31
texture = ExtResource("5_rufiq")
expand_mode = 4

[node name="Resistances" type="Label" parent="HBoxContainer/VBoxContainer3/Shop/Armor"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Does not possess an armor"
autowrap_mode = 3
clip_text = true

[node name="SpecialEffects" type="Label" parent="HBoxContainer/VBoxContainer3/Shop/Armor"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("3_sj57j")
text = "No special effects"
autowrap_mode = 3
clip_text = true

[node name="BuyButtons" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="WeaponButtCont" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/BuyButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyWeapon" type="Button" parent="HBoxContainer/VBoxContainer3/BuyButtons/WeaponButtCont"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_7g6qr")
text = "Purchace:"

[node name="ArmorButtCont" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/BuyButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyArmor" type="Button" parent="HBoxContainer/VBoxContainer3/BuyButtons/ArmorButtCont"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_7g6qr")
text = "Purchase:"

[node name="Lore" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Lore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="TextureRect" type="TextureRect" parent="Lore/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.1
texture = ExtResource("1_448q0")
expand_mode = 4

[node name="Name" type="Label" parent="Lore/VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Just Nothing"
autowrap_mode = 3
clip_text = true

[node name="VBoxContainer3" type="ScrollContainer" parent="Lore"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoreText" type="Label" parent="Lore/VBoxContainer3"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.36
theme_override_styles/normal = ExtResource("3_sj57j")
text = "Nothing"
autowrap_mode = 3

[connection signal="button_down" from="HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer2/GridContainer/OpenWork1" to="." method="_on_open_work_1_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer2/GridContainer/OpenWork2" to="." method="_on_open_work_2_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer2/GridContainer/OpenWork3" to="." method="_on_open_work_3_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer2/GridContainer/OpenWork4" to="." method="_on_open_work_4_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer3/Shop/OpenWeapon" to="." method="_on_open_weapon_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer3/Shop/OpenArmor" to="." method="_on_open_armor_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer3/BuyButtons/WeaponButtCont/BuyWeapon" to="." method="_on_buy_weapon_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer3/BuyButtons/ArmorButtCont/BuyArmor" to="." method="_on_buy_armor_button_down"]
